fixed success modal not entirely overlapping with creation wizard

--- a/cdap-ui/app/cdap/components/Wizard/Wizard.scss
+++ b/cdap-ui/app/cdap/components/Wizard/Wizard.scss
@@ -17,7 +17,7 @@
   height: 100%;
   .wizard-body {
     display: flex;
-    height: 90%;
+    height: 100%;
     border: 0;
 
     .wizard-steps-header {
@@ -65,9 +65,10 @@
     &.success {
       width: 100%;
       position: relative;
-      top: -100%;
+      // 40px: height of modal header
+      top: calc(-100% - 40px);
       right: 0;
-      height: 100%;
+      height: calc(100% + 40px);
       background: rgba(0, 0, 0, 0.8);
       color: white;
 
